@@ -40,3 +40,12 @@ XC-Package-Type: udeb
 Architecture: any
 Description: Hardware architecture detector
  This module detects the different hardware architectures.
+
+Package: archdetect-deb
+XC-Package-Type: deb
+Architecture: any
+Depends: ${shlibs:Depends}
+Provides: archdetect
+Description: Hardware architecture detector
+ This module detects the different hardware architectures.
+
